--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="searchBar">
 
 <label for="pokemon">PokeSearch:</label>
-<input type="text" name="pokemon" id="search" value="pikachu">
+<input type="text" name="pokemon" id="search" placeholder="pokemon name">
 
 </div>
 
